--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
+    "primeicons": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-image-pan-zoom-rotate": "^1.6.0",
