--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "firebase": "^11.0.1",
     "json-server": "^1.0.0-beta.3",
     "primeicons": "^7.0.0",
     "react": "^18.3.1",
